# grpc-service

./: Cargo.toml
examples/: install_service.rs
seebyte-service-handler/: Cargo.toml
seebyte-service-handler/src/: lib.rs
service-handler/: Cargo.toml
service-handler/src/: lib.rs
src/: main.rs  service.rs
